prevent scroll on narrow devices

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -35,6 +35,12 @@
  * Update the foundational and global aspects of the page.
  */
 
+/* Prevent scroll on narrow devices */
+html,
+body {
+  overflow-x: hidden;
+}
+
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
